# ChangeLog for media-video/nvidia-settings
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.7 2004/08/16 22:28:05 cyfred Exp $

  17 Aug 2004; Andrew Bevitt <cyfred@gentoo.org>; :
  Fixing digests

*nvidia-settings-1.0.6106 (16 Aug 2004)

  16 Aug 2004; Andrew Bevitt <cyfred@gentoo.org>;
  +nvidia-settings-1.0.6106.ebuild, -nvidia-settings-1.0.ebuild:
  Moving versions to match nvidia module versions

*nvidia-settings-1.0.6111 (06 Aug 2004)

  06 Aug 2004; Andrew Bevitt <cyfred@gentoo.org>;
  +nvidia-settings-1.0.6111.ebuild:
  Manually mirroring nvidia-settings for the new 6111 driver as nvidia didnt do
  a version change.

  26 Jul 2004; Andrew Bevitt <cyfred@gentoo.org>; nvidia-settings-1.0.ebuild:
  Depending on the 6106 drivers and closing bug 57449

  02 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  nvidia-settings-1.0.ebuild:
  virtual/glibc -> virtual/libc

*nvidia-settings-1.0 (02 Jul 2004)

  02 Jul 2004; Andrew Bevitt <cyfred@gentoo.org>; +metadata.xml,
  +files/libXNVCtrl.a.bz2, +nvidia-settings-1.0.ebuild:
  New Package nvidia-settings. Introduced to conincide with
  nvidia-kernel-1.0.6106 which it was released with. Thanks to people on bug
  #55714 (wolf especially for making the initial ebuild).
