@@ -1,7 +1,9 @@
-MD5 633c663cbf364b56a40d276bea5915ce nvidia-settings-1.0.6106.ebuild 1035
-MD5 a847702b9f92c264487624728189fd67 ChangeLog 1338
+MD5 231669615bde3883d1b211ad577dafc2 nvidia-settings-1.0.6106.ebuild 1035
+MD5 63fa8fd6609e071baa5d7125e60ba1b5 nvidia-settings-1.0.6629.ebuild 1129
+MD5 992e0c80004bb3b6c1483b1afd5a030b ChangeLog 1573
 MD5 35db7abed099185f5f46b95057b9e2db metadata.xml 284
-MD5 39abad6aa63ef74c564827e53b15f317 nvidia-settings-1.0.6111.ebuild 1129
+MD5 c246b055dbc1c001a6e5391355acf135 nvidia-settings-1.0.6111.ebuild 1127
 MD5 92faa535f9924a7ef5a2578d13d43fb3 files/libXNVCtrl.a.bz2 2797
 MD5 9804660f5537e2dcc39373163a727ca1 files/digest-nvidia-settings-1.0.6106 76
 MD5 d15804c20077d1318d338ec3db0ac495 files/digest-nvidia-settings-1.0.6111 76
+MD5 0a39b5babdda1f3d78fee4db5b053b0a files/digest-nvidia-settings-1.0.6629 76
