@@ -1,0 +1,1 @@
+MD5 c5dc37bc9de11133521c4b9f747bdbca nvidia-settings-1.0.6629.tar.gz 817715
