@@ -1,18 +1,18 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/Attic/nvidia-settings-1.0.6111.ebuild,v 1.2 2004/11/07 07:25:08 cyfred Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/Attic/nvidia-settings-1.0.6629.ebuild,v 1.1 2004/11/07 07:25:08 cyfred Exp $
 
 inherit eutils
 
 DESCRIPTION="NVIDIA Linux X11 Settings Utility"
 HOMEPAGE="http://www.nvidia.com/"
-NVIDIA_VERSION="1.0.6111"
+NVIDIA_VERSION="1.0.6629"
 SRC_URI="http://dev.gentoo.org/~cyfred/distfiles/${PN}-${NVIDIA_VERSION}.tar.gz"
 S="${WORKDIR}/${PN}-1.0"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="-* x86 amd64"
+KEYWORDS="-* ~x86 ~amd64"
 RESTRICT=""
 IUSE=""
 
